syntax = "proto3";

package netsvr.topicListResp;

import "reCtx.proto";

option go_package = "internal/protocol;protocol";

//worker响应business，返回网关中的主题
message TopicListResp {
  //req（request）、resp（response）时候的上下文，worker会原样回传给business
  netsvr.reCtx.ReCtx reCtx = 1;
  //网关中现存的主题
  repeated string topics = 2;
}